    - Towny now logs all player issued commands to the server.log
    - Added better control over name/chat modifying - modify_chat: '{permprefix}{townynameprefix}{playername}{townynamepostfix}{permsuffix}'
    - Added custom titles. Kings can assign titles to their vassals with '/nation set title [resident] title'. The title will be used in place of the townynameprefix.
    - Added custom surnames. Kings can assign surnames to their vassals with '/nation set surname [resident] text'. The title will be used in place of the townynamepostfix.
    - Fixed an error caused by deleted residents not being cleaned up from other resident friend lists.
    - Nations enemy/Ally lists are now updated when another nation is deleted or renamed.
    - Paintings are now protected along with all other blocks.
    - townLevels and nationLevels are now full YAML nodes for easy editing (commit by dumptruckman).
    - Pistons can now only operate between similarly owned townblocks or wild areas (No piston griefing).
    - You can now block the use of '/town spawn' if you are in certain zones (unclaimed 'wilderness', Neutral towns and Enemy towns).
v0.74.1:
    - Added sanity checking to prevent colour codes in titles and surnames, and a notification message when a title/surname is cleared.
    - Removed console spam from 'send message'.
    - Disabled the use of '/town new' and '/town claim' in worlds where Towny is disabled.
    - Added 'disable_modify_chat' for those not wanting Towny to make any changes.
    - Fixed an error if a player uses '/town spawn' after logging in, but before moving. This caused the player cache to be empty.
    - All console messages should now have their colour codes removed correctly.
    - New config.yml handling code means no need to delete config at each upgrade. (thanks dumptruckman)
    - Fixed town spawn being lost at load when using non standard (16x16) plot sizes.