@@ -420,3 +420,4 @@ v0.74.1:
     - All console messages should now have their colour codes removed correctly.
     - New config.yml handling code means no need to delete config at each upgrade. (thanks dumptruckman)
     - Fixed town spawn being lost at load when using non standard (16x16) plot sizes.
+    - Allow the ignition of obsidian for lighting portals, even when fire lighting is disabled in town.
